# Transformer

./: README.md  code  pyproject.toml  pyrightconfig.json
scripts/: run_toy_train.sh
src/: data.py  eval.py  masks.py  model.py  train.py
src/transformer/: __init__.py  data.py  eval.py  masks.py  model.py  train.py
tests/: conftest.py  test_attention_equivalence.py  test_masks.py  test_shapes.py
