[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
version = "0.1.0"
description = "Educational Transformer (strict pyright + ruff)"
requires-python = ">=3.12"
dependencies = ["torch>=2.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------
# pyright config 
# -------------------------
[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
exclude = []
reportMissingImports = true

# report unknown is kind of tooooo strict
reportUnusedImport = "none" # for __init__.py ...
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingParameterType = "none"
reportMissingTypeStubs = "none"
reportDeprecated = "error"
reportUnknownLambdaType = "warning" ## for avoid using non typed lambda
reportUnnecessaryComparison = "warning"
reportAttributeAccessIssue = "error"

reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = "warning"
strictListInference = false
strictSetInference = false
strictDictionaryInference = false
deprecateTypingAliases = true
disableBytesTypePromotions = true
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportImportCycles = false # it is too hard to avoid it
reportUnusedClass = true
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"
reportPrivateUsage = "none" # too hard to remove it now as we need private stuffs from maniskill and omegaconf and so on
reportConstantRedefinition = "warning"
reportInconsistentConstructor = "warning"
reportMissingSuperCall = "warning"
# reportShadowedImports = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitOverride = "none" # that's tooo common in nowadays code ..
# reportUnusedCallResult = "none"   # not open even for strict
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"

# -------------------------
# ruff config
# -------------------------
[tool.ruff]
target-version = "py312"
preview = true  # for certain rules and black preview behavior
exclude = ["third_party", "assets", "data"]
line-length = 120

[tool.ruff.lint]
select = [
  "F",  # Flake8
  "E", "W",  # pycodestyle
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "EXE",  # flake8-executable
  "G",  # flake8-logging-format
  "SIM",  # flake8-simplify
  "NPY",  # NumPy
  "PERF",  # Perflint
  "PGH004",  # no bare noqa
  "PIE794",
  "PIE800",
  "PIE804",
  "PIE807",
  "PIE810",
  "PLC0131",  # type bivariance
  "PLC0132",  # type param mismatch
  "PLC0205",  # string as __slots__
  "PLE",
  "PLR0133",  # constant comparison
  "PLR0206",  # property with params
  "PLR1722",  # use sys exit
  "PLW0129",  # assert on string literal
  "PLW0406",  # import self
  "PLW0711",  # binary op exception
  "PLW1509",  # preexec_fn not safe with threads
  "PLW3301",  # nested min max
  "PT006",  # flake8-pytest-style
  "PT022",
  "PT023",
  "PT024",
  "PT025",
  "PT026",
  "PYI",  # flake8-pyi
  "TRY203",
  "RUF008",  # mutable dataclass default
  "RUF009",
  "RUF013",  # implicit typing.Optional is disallowed
  "RUF015",  # access first ele in constant time
  "RUF016",  # type error non-integer index
  "RUF017",  # avoid quadratic list summation
]
ignore = [
  "UP007",   # allow typing.Optional[int], instead of forcing int | None
  "UP037",   # allow quotes around type
  "UP035",   # import Self from typing_extensions
  "EXE002",  # ntfs has no executable bit
  "SIM105",  # allow try-except-pass blocks
  "B009",    # allow getattr with constant
  "B010",    # allow setattr with constant
  "NPY002",  # allow numpy.random
  "E741",    # allow ambiguous variable names like O, l, I
  "UP046",
  "UP047",   # exclude type hints from pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",  # unused import
]
"*.pyi" = [
  "F821",  # allow undefined name
  "E501",  # line too long
  "PYI001",  # allow TypeVar name without '_' prefix
  "PYI021",  # allow docstrings in stub files
  "PYI029",  # allow __str__ and __repr__ in stubs
  "PYI032",  # allow typing.Any annotations for __eq__ and __ne__
  "PYI054",  # allow long numeric literals
]

[tool.ruff.format]
line-ending = "lf"  # Use `\n` line endings for all files, default on Unix.
docstring-code-format = true
